--- a/index.html
+++ b/index.html
@@ -6,28 +6,50 @@
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
    <link rel="stylesheet" href="css/custom.css">
 
-   <title>IoT@Tiger</title>
+   <title>Tiger IoT</title>
 
 </head>
 <body>
-   <head>
+   <header class="mb-0 pb-0">
+      <!-- Navigation -->
+      <nav class="navbar navbar-dark navbar-expand-lg fixed-top">
 
-   </head>
+        <div class="container-fluid">
+          <a class="navbar-brand d-flex flex-f" href="http://home.TigerNie.com">home.TigerNie.com</a>
+
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+           <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+           <div class="navbar-nav ml-auto">
+             <a class="nav-item nav-link active" href="#">Home</a>
+             <!-- <a class="nav-item nav-link" href="pages/about.html">About Me</a>
+             <a class="nav-item nav-link" href="#">Skills & Education</a>
+             <a class="nav-item nav-link" href="#">Portfolio</a>
+             <a class="nav-item nav-link" href="#">Contact</a>
+             <a class="nav-item nav-link" href="#">Resume</a> -->
+           </div>
+          </div>
+
+        </div>
+      </nav>
+      <!-- end of navigation -->
+   </header>
    <main role="main" class="container-fluid h-100 d-flex flex-column pb-5">
       <!-- Data -->
       <div class="container-fluid">
          <div id="graphTemperature"></div>
-         <p id="temperatureStatus">N/A</div>
+         <p id="temperatureStatus">Loading graphs. . .</div>
          <button id='refresh-data'>Refresh</button>
       </div>
 
       <!-- Chat -->
-      <div id="message-div">
+      <!-- <div id="message-div">
          <ul id="messages"></ul>
          <form action="">
             <input id="m" autocomplete="off" /><button>Send</button>
          </form>
-      </div>
+      </div> -->
 
    </main>
 
@@ -39,6 +61,8 @@
    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
    <script>
+   // Plots
+   // TODO: Move time series plot to new .js file.
    var layout = {
       title: {
          text:'Temperature',
@@ -74,6 +98,7 @@
          autorange: true,
          range: [15, 30],
          }
+
       }
    };
    Plotly.newPlot('graphTemperature', [], layout, {responsive: true});
@@ -108,11 +133,11 @@
          $('#m').val('');
          return false;
       });
+      document.getElementById('refresh-data').onclick = function(){
+         socket.emit('get-new-data');
+         console.log("asking for data");
+      }
 
-      $('#refresh-data').click(function(e){
-         e.preventDefault();
-         socket.emit('get-new-data')
-      })
    })
    </script>
 
