Working again in http

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
    <script>
    // Plots
    // TODO: Move time series plot to new .js file.
+   // TODO: Add navigation between dates.
    var layout = {
       title: {
          text:'Temperature',
