--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
    <!-- Botstrap & custom CSS -->
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
    <link rel="stylesheet" href="css/custom.css">
+   <!-- Latest compiled and minified plotly.js JavaScript -->
+   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
    <title>Tiger IoT</title>
-
 </head>
 <body>
    <header class="mb-0 pb-0">
@@ -35,15 +36,22 @@
       </nav>
       <!-- end of navigation -->
    </header>
+
+
    <main role="main" class="container-fluid h-100 d-flex flex-column pb-5">
       <!-- Data -->
-      <div class="container-fluid">
-         <div id="graphTemperature"></div>
-         <p id="temperatureStatus">Loading graphs. . .</div>
+      <div class="row no-gutters">
+         <div class="col">
+            <div id="graphTemperature"></div>
+            <p id="temperatureStatus">Loading graphs. . .</p>
+         </div>
 
-         <div id="graphActivity"></div>
-         <p id="activityStatus">Loading graphs. . .</div>
-
+         <div class="col">
+            <div id="graphActivity"></div>
+            <p id="activityStatus">Loading graphs. . .</p>
+         </div>
+      </div>
+      <div class="row no-gutters">
          <button id='refresh-data'>Refresh</button>
       </div>
 
@@ -54,68 +62,17 @@
             <input id="m" autocomplete="off" /><button>Send</button>
          </form>
       </div> -->
-
    </main>
 
    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
       crossorigin="anonymous"></script>
    <script src="/socket.io/socket.io.js"></script>
-   <!-- Latest compiled and minified plotly.js JavaScript -->
-   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-
-   <script>
-   // Plots
-   // TODO: Move time series plot to new .js file.
-   // TODO: Add navigation between dates.
-   var layout = {
-      title: {
-         text:'Temperature',
-         font: {
-            // family: 'Courier New, monospace',
-            size: 24
-         },
-         xref: 'paper',
-         x: 0.05,
-      },
-      xaxis: {
-         autorange: true,
-         title: {
-            text: 'Timestamp',
-            font: {
-               // family: 'Courier New, monospace',
-               size: 18,
-               // color: '#7f7f7f'
-            }
-         },
-         range: ['2019-08-11 00-00-00', '2019-08-11 23-59-59'],
-         rangeslider: {range: ['2019-08-11 00-00-00', '2019-08-11 23-59-59']},
-         type: 'time'
-      },
-      yaxis: {
-         title: {
-            text: 'Temperature',
-            font: {
-               // family: 'Courier New, monospace',
-               size: 18,
-               // color: '#7f7f7f'
-            },
-         autorange: true,
-         range: [15, 30],
-         }
-
-      }
-   };
-   Plotly.newPlot('graphTemperature', [], layout, {responsive: true});
-
-
-   function updatePlot(id, data) {
-      var graph = $(id)[0];
-      graph.data = data;
-      graph.layout.xaxis.range = [];
-      Plotly.redraw(graph);
-      Plotly.Plots.resize(graph);
-   }
+   <script src="./js/timeSeriesPlot.js"></script>
+   <script type="text/JavaScript">
+   // // Plots
+   // // TODO: Move time series plot to new .js file.
+   // // TODO: Add navigation between dates.
 
    var layout = {
       title: {
@@ -133,7 +90,7 @@
             text: 'Timestamp',
             font: {
                // family: 'Courier New, monospace',
-               size: 18,
+               size: 14,
                // color: '#7f7f7f'
             }
          },
@@ -146,7 +103,7 @@
             text: 'Activity',
             font: {
                // family: 'Courier New, monospace',
-               size: 18,
+               size: 14,
                // color: '#7f7f7f'
             },
          autorange: true,
@@ -157,30 +114,32 @@
    };
    Plotly.newPlot('graphActivity', [], layout, {responsive: true});
 
+   timeSeriesPlot('graphTemperature', 'Temperature', [],
+                  {x_label:'Timestamp', y_label:'Temperature'});
    // Socket Client
    $(function() {
       var socket = io();
       socket.on('update-data', function (data) {
          trace1 = {
-            type: 'scatter',
+            // type: 'scatter',
             x: data.time,
             y: data.temperature,
          }
-         var str = "Current Temperature: " + data.temperature[data.temperature.length-1]
-            + "C, sampled at " + data.time[data.time.length-1];
-         document.getElementById('temperatureStatus').innerHTML =str;
-         var data = [ trace1 ];
-         updatePlot("#graphTemperature", data);
 
          trace2 = {
-            type: 'scatter',
             x: data.time,
             y: data.activity,
          }
-         var str = "Current Activity: " + data.activity;
+
+         var str = "Current Temperature: " + data.temperature[data.temperature.length-1]
+            + "C, sampled at " + data.time[data.time.length-1];
+         document.getElementById('temperatureStatus').innerHTML =str;
+
+         var str = "Current Activity: " + data.activity[data.activity.length-1];
          document.getElementById('activityStatus').innerHTML =str;
-         var data = [ trace2 ];
-         updatePlot("#graphActivity", data);
+
+         updatePlot('#graphTemperature', [ trace1 ]);
+         updatePlot("#graphActivity", [ trace2 ]);
 
          socket.emit('acknowledge-data', { my:'index.html received data!'});
       });
