Fixed progress bar bug

--- a/index.html
+++ b/index.html
@@ -306,6 +306,7 @@
       $("#updateTime").html((new Date()).toLocaleTimeString());}, 1000);
     
 //    Update progress bar
+      var scale = 17.7;
       var progress = 13.7/17.7;
       var left = Math.floor(scale - (progress * scale)) + " billion years  ";
       var progress = progress * 100;
