--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                   <div class="progress mb-4">
                     <div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
-                  <h4 class="small font-weight-bold">Python3 <span class="float-right">40%</span></h4>
+                  <h4 class="small font-weight-bold">Python3 + SQLite<span class="float-right">40%</span></h4>
                   <div class="progress mb-4">
                     <div class="progress-bar bg-warning" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
@@ -244,11 +244,29 @@
                   <h6 class="m-0 font-weight-bold text-yellow">Development Approach</h6>
                 </div>
                 <div class="card-body">
-                  <p>This website is a dashboard for my IoT devices at home. Currently this includes a thermister to monitor temperature and an accelerometer to monitor activity (which, as you'd imagine, is basically a very good random number generator). The list will surely expand in the future.</p>
+                  <p>
+                    This projects is motivated by my fascination with smart home electronics
+                    and my desire to monitor the status of my apartment 24/7.   
+                    It was incredibly fun to put all this together as it required such a diverse set of
+                    tools (fullstack, database, microcontrollers and sensors). 
+                    You are looking at the dashboard for my IoT devices hosted on a RaspberryPi, 
+                    including a thermister to monitor temperature and 
+                    an accelerometer to monitor activity (which, as you'd imagine, 
+                    is basically a very good random number generator). 
+                  </p>
                   <div class="text-center">
                     <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem;" src="static/img/undraw_report_mx0a.svg" alt="">
                   </div>
-                  <p class="mb-0">I built this website mostly for fun but also as a fullstack project. The front end is built with <a href="https://getbootstrap.com">Bootstrap</a> and <a href="https://jquery.com">jQuery</a> based on my modified version of the <a href="https://github.com/haolinnie/startbootstrap-sb-admin-2">SB Admin 2</a> theme. The backend is built with <a href="https://nodejs.org">Node.js</a> and <a href="https://socket.io">Socket.io</a> is used to pass data between the server and the client. The server is hosted with <a href="https://www.nginx.com">NGINX</a> on a Raspberry Pi 3B+ in my bedroom, which also controls the sensors through an Arduino. In the future I will implement the MQTT protocol to communicate with multiple IoT devices. </p>
+                  <p class="mb-0">
+                    The front end is built with <a href="https://getbootstrap.com">Bootstrap</a> and 
+                    <a href="https://jquery.com">jQuery</a> based on my modified version of the 
+                    <a href="https://github.com/haolinnie/startbootstrap-sb-admin-2">SB Admin 2</a> 
+                    theme. The backend is built with <a href="https://nodejs.org">Node.js</a> and 
+                    <a href="https://socket.io">Socket.io</a>, while data is stored in a 
+                    <a href="https://www.sqlite.org">SQLite</a> database. The server is hosted with 
+                    <a href="https://www.nginx.com">NGINX</a> on a Raspberry Pi 3B+ in my bedroom, 
+                    which also controls the sensors through an Arduino. In the future I will implement 
+                    the MQTT protocol to communicate with multiple IoT devices. </p>
                 </div>
               </div>
             </div>
