--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                 </div>
                 <div class="card-body">
                   <p>
-                    This projects is motivated by my fascination with smart home electronics
+                    This projects is motivated by my fascination with IoT electronics
                     and my desire to monitor the status of my apartment 24/7.   
                     It was incredibly fun to put all this together as it required such a diverse set of
                     tools (fullstack, database, microcontrollers and sensors). 
