--- a/index.html
+++ b/index.html
@@ -229,8 +229,9 @@
                     <a href="https://socket.io">Socket.io</a>, while data is stored in a 
                     <a href="https://www.sqlite.org">SQLite</a> database. The server is hosted with 
                     <a href="https://www.nginx.com">NGINX</a> on a <a href="https://www.raspberrypi.org/">
-                    Raspberry Pi 3B+</a> in my bedroom, which also controls the sensors through an Arduino. In the future I will implement 
-                    the MQTT protocol to communicate with multiple IoT devices. </p>
+                       Raspberry Pi 3B+</a> in my bedroom, which also controls the sensors through an 
+                    <a href="">Arduino</a>. In the future I will implement 
+                    the <a href="http://mqtt.org/">MQTT protocol</a> to communicate with multiple IoT devices. </p>
                 </div>
               </div>
             </div>
