--- a/index.html
+++ b/index.html
@@ -1,66 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<!--
 
-	<!-- Google Analytics -->
-	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      |￣￣￣￣￣￣￣|
+      |   G'day!   |
+      |＿＿＿＿＿＿__|
+    (\__/)  ||
+    (•ㅅ•)  ||
+    / 　 づ
 
-		ga('create', 'UA-145693599-2', 'auto');
-		ga('send', 'pageview');
-
-      // Measure outbound links
-      function handleOutboundLinkClicks(event) {
-        ga('send', 'event', {
-          eventCategory: 'Outbound Link',
-          eventAction: 'click',
-          eventLabel: event.target.href,
-          transport: 'beacon'
-        });
-      }
-	</script>
-	<!-- End Google Analytics -->
-
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="author" content="Tiger Nie">
-  <meta name="description" content="Tiger's IoT Dashboard">
-
-  <title>TigerIoT Dashboard</title>
-
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="shortcut icon" href="favicon.ico">
-  <link rel="manifest" href="/site.webmanifest">
-
-  <!-- Custom fonts for this template-->
-  <link href="static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-
-  <!-- Custom bootstrap styles for this template-->
-  <link href="static/css/custom.min.css" rel="stylesheet">
-
-</head>
+ -->
+<!-- Google Analytics -->
+<script>
+   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+   ga('create', 'UA-145693599-2', 'auto');
+   ga('send', 'pageview');
+   // Measure outbound links
+   function handleOutboundLinkClicks(event) {
+     ga('send', 'event', {
+       eventCategory: 'Outbound Link',
+       eventAction: 'click',
+       eventLabel: event.target.href,
+       transport: 'beacon'
+     });
+   }
+</script>
+<!-- End Google Analytics -->
+<meta charset=utf-8>
+<meta name=viewport content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name=author content="Tiger Nie">
+<meta name=description content="Tiger's IoT Dashboard">
+<meta name=title content="TigerIoT">
+<title>TigerIoT Dashboard</title>
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="shortcut icon" href="favicon.ico">
+<link rel="manifest" href="/site.webmanifest">
+<!-- Custom fonts for this template-->
+<link href="static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+<!-- Custom bootstrap styles for this template-->
+<link href="static/css/custom.min.css" rel="stylesheet">
 
 <body id="page-top">
-
   <!-- Page Wrapper -->
   <div id="wrapper">
-
     <!-- Content Wrapper -->
     <div id="content-wrapper" class="d-flex flex-column">
-
       <!-- Main Content -->
       <div id="content">
-
         <!-- Topbar -->
         <nav class="navbar navbar-expand navbar-dark bg-- topbar mb-3 static-top">
-
           <!-- Icon -->
           <a class="d-flex align-items-center justify-content-center text-light text-strong text-lg" href="index.html">
             <div class="sidebar-brand-icon rotate-n-15">
@@ -68,16 +62,12 @@
             </div>
             <div class="h3 mb-0 mx-3">Tiger IoT <span class="text-yellow">Dashboard</span></div>
           </a>
-
         </nav>
         <!-- End of Topbar -->
-
         <!-- Begin Page Content -->
         <div class="container-fluid">
-
           <!-- Content Row -->
           <div class="row">
-
             <!-- Time Card -->
             <div class="col-xl-3 col-md-6 mb-4">
               <div class="card border-left-primary h-100 py-2">
@@ -307,7 +297,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 
-
   <!-- Update the current time-->
   <script type="text/javascript">
     
@@ -334,5 +323,4 @@
   <script src="static/js/main-client.js"></script>
   <script src="static/js/mixin.js"></script>
 </body>
-
 </html>
