Added link to tigernie.com

--- a/index.html
+++ b/index.html
@@ -57,11 +57,12 @@
         <nav class="navbar navbar-expand navbar-dark bg-- topbar mb-3 static-top">
           <!-- Icon -->
           <a class="d-flex align-items-center justify-content-center text-light text-strong text-lg" href="index.html">
-            <div class="sidebar-brand-icon rotate-n-15">
-              <i class="fas fa-seedling"></i>
-            </div>
             <div class="h3 mb-0 mx-3">Tiger IoT <span class="text-yellow">Dashboard</span></div>
           </a>
+          <a class="d-flex mr-3 text-light text-strong text-lg ml-auto" href="https://tigernie.com">
+             <i class="fas fa-user-astronaut"></i>
+          </a>
+
         </nav>
         <!-- End of Topbar -->
         <!-- Begin Page Content -->
