Added helmet and compression for Node server and deploy script

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     <a href="https://jquery.com">jQuery</a> based on my modified version of the 
                     <a href="https://github.com/haolinnie/startbootstrap-sb-admin-2">SB Admin 2</a> 
                     theme. The backend is built with <a href="https://nodejs.org">Node.js</a> and 
-                    <a href="https://socket.io">Socket.io</a>, while data is stored in a 
+                    <a href="https://http://expressjs.com">Express</a>, while data is stored in a 
                     <a href="https://www.sqlite.org">SQLite</a> database. The server is hosted with 
                     <a href="https://www.nginx.com">NGINX</a> on a <a href="https://www.raspberrypi.org/">
                        Raspberry Pi 3B+</a> in my bedroom, which also controls the sensors through an 
